--- a/about.ui
+++ b/about.ui
@@ -50,7 +50,7 @@
          <string/>
         </property>
         <property name="pixmap">
-         <pixmap>logo.png</pixmap>
+         <pixmap>icons/logo.png</pixmap>
         </property>
         <property name="scaledContents">
          <bool>true</bool>
